--- a/index.html
+++ b/index.html
@@ -388,33 +388,34 @@
         <span class="char-label">Хлопок</span>
         <span class="char-val">86%</span>
     </div>
-                <div id="content-care" class="desc-content" style="display: none;">
-    <div class="char-row">
-        <span class="char-label">Стирка</span>
-        <span class="char-val">30°C / Деликатная</span>
-    </div>
-    <div class="char-row">
-        <span class="char-label">Отжим</span>
-        <span class="char-val">до 800 об/мин</span>
-    </div>
-    <div class="char-row">
-        <span class="char-label">Глажка</span>
-        <span class="char-val">до 150°C (изнанка)</span>
-    </div>
-    <div class="char-row">
-        <span class="char-label">Химчистка</span>
-        <span class="char-val">Деликатная</span>
-    </div>
+    <div id="content-care" class="desc-content" style="display: none;">
+                <div class="char-row">
+                    <span class="char-label">Стирка</span>
+                    <span class="char-val">30°C / Деликатная</span>
+                </div>
+                <div class="char-row">
+                    <span class="char-label">Отжим</span>
+                    <span class="char-val">до 800 об/мин</span>
+                </div>
+                <div class="char-row">
+                    <span class="char-label">Глажка</span>
+                    <span class="char-val">до 150°C (изнанка)</span>
+                </div>
+                <div class="char-row">
+                    <span class="char-label">Химчистка</span>
+                    <span class="char-val">Деликатная</span>
+                </div>
 
-    <div style="font-size: 13px; color: #333; margin-top: 15px; line-height: 1.5;">
-        <strong>Важные рекомендации:</strong><br>
-        • Перед стиркой обязательно вывернуть наизнанку.<br>
-        • Использовать средство без отбеливателей.<br>
-        • Машинная сушка запрещена. Сушить в расправленном виде на горизонтальной поверхности.<br>
-        • Не сушить на батарее и под прямыми лучами солнца.<br>
-        • Гладить строго с изнанки и без использования пара.
-    </div>
-</div>
+                <div style="font-size: 13px; color: #333; margin-top: 15px; line-height: 1.5;">
+                    <strong>Важные рекомендации:</strong><br>
+                    • Перед стиркой обязательно вывернуть наизнанку.<br>
+                    • Использовать средство без отбеливателей.<br>
+                    • Машинная сушка запрещена.<br>
+                    • Сушить в расправленном виде на горизонтальной поверхности.<br>
+                    • Не сушить на батарее и под прямыми лучами солнца.<br>
+                    • Гладить строго с изнанки и без использования пара.
+                </div>
+            </div>
     <div class="char-row">
         <span class="char-label">Флис</span>
         <span class="char-val">14% (485 г/м²)</span>
@@ -1030,6 +1031,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;;
     </script>
 </body>
 </html>
+
 
 
 
