--- a/index.html
+++ b/index.html
@@ -374,46 +374,32 @@
             </div>
 
             <div id="content-desc" class="desc-content" style="display: block;">
-                <div class="desc-line">- Lacoste</div>
-                <div class="desc-line">- Размер L-XL</div>
-            </div>
+                </div>
 
             <div id="content-chars" class="desc-content" style="display: none;">
                 <div class="char-row"><span class="char-label">Материал</span><span class="char-val">Футер 3-х нитка (плотный)</span></div>
                 <div class="char-row"><span class="char-label">Пол</span><span class="char-val">Унисекс</span></div>
                 <div class="char-row"><span class="char-label">Сезон</span><span class="char-val">Мульти</span></div>
             </div>
-            <div id="content-comp" class="desc-content" style="display: none;">
-    <div class="char-row">
-        <span class="char-label">Хлопок</span>
-        <span class="char-val">86%</span>
-    </div>
-    <div id="content-care" class="desc-content" style="display: none;">
-                <div class="char-row">
-                    <span class="char-label">Стирка</span>
-                    <span class="char-val">30°C / Деликатная</span>
-                </div>
-                <div class="char-row">
-                    <span class="char-label">Отжим</span>
-                    <span class="char-val">до 800 об/мин</span>
-                </div>
-                <div class="char-row">
-                    <span class="char-label">Глажка</span>
-                    <span class="char-val">до 150°C (изнанка)</span>
-                </div>
-                <div class="char-row">
-                    <span class="char-label">Химчистка</span>
-                    <span class="char-val">Деликатная</span>
-                </div>
 
-                <div style="font-size: 13px; color: #333; margin-top: 15px; line-height: 1.5;">
-                    <strong>Важные рекомендации:</strong><br>
-                    • Перед стиркой обязательно вывернуть наизнанку.<br>
-                    • Использовать средство без отбеливателей.<br>
+            <div id="content-comp" class="desc-content" style="display: none;">
+                <div class="char-row"><span class="char-label">Хлопок</span><span class="char-val">86%</span></div>
+                <div class="char-row"><span class="char-label">Флис</span><span class="char-val">14% (485 г/м²)</span></div>
+                <div class="char-row"><span class="char-label">Ткань</span><span class="char-val">Peach-эффект</span></div>
+            </div>
+
+            <div id="content-care" class="desc-content" style="display: none;">
+                <div class="char-row"><span class="char-label">Стирка</span><span class="char-val">30°C / Деликатная</span></div>
+                <div class="char-row"><span class="char-label">Отжим</span><span class="char-val">до 800 об/мин</span></div>
+                <div class="char-row"><span class="char-label">Глажка</span><span class="char-val">до 150°C (изнанка)</span></div>
+                <div class="char-row"><span class="char-label">Химчистка</span><span class="char-val">Деликатная</span></div>
+                <div style="font-size: 13px; color: #333; margin-top: 15px; line-height: 1.5; text-align: left;">
+                    <strong>Рекомендации:</strong><br>
+                    • Стирать вывернув наизнанку.<br>
+                    • Без отбеливателей.<br>
                     • Машинная сушка запрещена.<br>
-                    • Сушить в расправленном виде на горизонтальной поверхности.<br>
-                    • Не сушить на батарее и под прямыми лучами солнца.<br>
-                    • Гладить строго с изнанки и без использования пара.
+                    • Сушить горизонтально (не на батарее).<br>
+                    • Гладить с изнанки без пара.
                 </div>
             </div>
     <div class="char-row">
@@ -735,7 +721,7 @@
 document.querySelectorAll('.size-box').forEach(el => el.classList.remove('active')); 
 const oneSizeBtn = Array.from(document.querySelectorAll('.size-box')).find(el => el.innerText === 'OneSize');
 if (oneSizeBtn) oneSizeBtn.classList.add('active');
-document.querySelector('.size-label span').innerText = currentSelectedSize;;
+document.querySelector('.size-label span').innerText = currentSelectedSize;
 
             switchDescTab('desc');
             updateHeartVisuals();
@@ -1033,6 +1019,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;;
     </script>
 </body>
 </html>
+
 
 
 
