--- a/index.html
+++ b/index.html
@@ -373,11 +373,10 @@
                 <button id="btn-tab-care" class="desc-tab-btn tab-gray" onclick="switchDescTab('care')">Уход</button>
             </div>
 
-            <div id="content-desc" class="desc-content" style="display: block;">
-                </div>
+            <div id="content-desc" class="desc-content" style="display: block;"></div>
 
             <div id="content-chars" class="desc-content" style="display: none;">
-                <div class="char-row"><span class="char-label">Материал</span><span class="char-val">Футер 3-х нитка (плотный)</span></div>
+                <div class="char-row"><span class="char-label">Материал</span><span class="char-val">Футер 3-х нитка</span></div>
                 <div class="char-row"><span class="char-label">Пол</span><span class="char-val">Унисекс</span></div>
                 <div class="char-row"><span class="char-label">Сезон</span><span class="char-val">Мульти</span></div>
             </div>
@@ -393,6 +392,7 @@
                 <div class="char-row"><span class="char-label">Отжим</span><span class="char-val">до 800 об/мин</span></div>
                 <div class="char-row"><span class="char-label">Глажка</span><span class="char-val">до 150°C (изнанка)</span></div>
                 <div class="char-row"><span class="char-label">Химчистка</span><span class="char-val">Деликатная</span></div>
+
                 <div style="font-size: 13px; color: #333; margin-top: 15px; line-height: 1.5; text-align: left;">
                     <strong>Рекомендации:</strong><br>
                     • Стирать вывернув наизнанку.<br>
@@ -1019,6 +1019,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;
     </script>
 </body>
 </html>
+
 
 
 
