--- a/index.html
+++ b/index.html
@@ -382,17 +382,37 @@
             </div>
 
             <div id="content-comp" class="desc-content" style="display: none;">
-                <div class="char-row"><span class="char-label">Хлопок</span><span class="char-val">86%</span></div>
-                <div class="char-row"><span class="char-label">Флис</span><span class="char-val">14% (485 г/м²)</span></div>
-                <div class="char-row"><span class="char-label">Ткань</span><span class="char-val">Peach-эффект</span></div>
+                <div class="char-row">
+                    <span class="char-label">Хлопок</span>
+                    <span class="char-val">86%</span>
+                </div>
+                <div class="char-row">
+                    <span class="char-label">Флис</span>
+                    <span class="char-val">14% (485 г/м²)</span>
+                </div>
+                <div class="char-row">
+                    <span class="char-label">Ткань</span>
+                    <span class="char-val">Peach-эффект</span>
+                </div>
             </div>
 
             <div id="content-care" class="desc-content" style="display: none;">
-                <div class="char-row"><span class="char-label">Стирка</span><span class="char-val">30°C / Деликатная</span></div>
-                <div class="char-row"><span class="char-label">Отжим</span><span class="char-val">до 800 об/мин</span></div>
-                <div class="char-row"><span class="char-label">Глажка</span><span class="char-val">до 150°C (изнанка)</span></div>
-                <div class="char-row"><span class="char-label">Химчистка</span><span class="char-val">Деликатная</span></div>
-
+                <div class="char-row">
+                    <span class="char-label">Стирка</span>
+                    <span class="char-val">30°C / Деликатная</span>
+                </div>
+                <div class="char-row">
+                    <span class="char-label">Отжим</span>
+                    <span class="char-val">до 800 об/мин</span>
+                </div>
+                <div class="char-row">
+                    <span class="char-label">Глажка</span>
+                    <span class="char-val">до 150°C (изнанка)</span>
+                </div>
+                <div class="char-row">
+                    <span class="char-label">Химчистка</span>
+                    <span class="char-val">Деликатная</span>
+                </div>
                 <div style="font-size: 13px; color: #333; margin-top: 15px; line-height: 1.5; text-align: left;">
                     <strong>Рекомендации:</strong><br>
                     • Стирать вывернув наизнанку.<br>
@@ -684,7 +704,6 @@
         // --- ЛОГИКА ТОВАРА ---
         function openProduct(id) {
             currentOpenProductId = id; 
-            currentSelectedSize = 'L';
             const product = productsData[id];
 
             // НАПОЛНЕНИЕ СЛАЙДЕРА
@@ -1019,6 +1038,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;
     </script>
 </body>
 </html>
+
 
 
 
