--- a/index.html
+++ b/index.html
@@ -326,14 +326,14 @@
                 <img src="img/GREY FRONT.png" class="product-image">
                 <div class="product-info">
                     <div class="grid-price">12 000 ₽</div>
-                    <div class="grid-name">Тяжеловесы Grey</div>
+                    <div class="grid-name">Тяжеловесы Серые</div>
                 </div>
             </div>
             <div class="product-card" onclick="openProduct('blue')">
                 <img src="img/BLUE FRONT.png" class="product-image">
                 <div class="product-info">
                     <div class="grid-price">12 000 ₽</div>
-                    <div class="grid-name">Тяжеловесы Blue</div>
+                    <div class="grid-name">Тяжеловесы Синие</div>
                 </div>
             </div>
         </div>
@@ -389,8 +389,8 @@
                     <span class="char-val">86%</span>
                 </div>
                 <div class="char-row">
-                    <span class="char-label">Флис</span>
-                    <span class="char-val">14% (485 г/м²)</span>
+                    <span class="char-label">Флис (485 г/м²)</span>
+                    <span class="char-val">14%</span>
                 </div>
             </div>
 
@@ -605,11 +605,11 @@
         // ДАННЫЕ О ТОВАРАХ
         const productsData = {
             'grey': { 
-                name: 'Тяжеловесы Grey', 
+                name: 'Тяжеловесы Серые', 
                 priceVal: 12000, 
                 price: '12 000 ₽',
                 modelInfo: 'Параметры модели: рост 181 см, вес 75 кг',
-                description: `- Широкий силуэт, держащий форму;<br>- Широкие штаны из плотного футера 3-х нитки;<br>- Внутри утеплены флисом;<br>- Фиксирующий размер внутренний пояс;<br>- Два глубоких кармана спереди, один сзади;<br>- Теплоизоляционные свойства ткани обеспечивают сохранение тепла;<br>- Благодаря флису сохраняет широкий силуэт при ходьбе и не теряет форму после многократных стирок;<br>- Усиленная эластичность в шаговой зоне;<br>- Peach-эффект, который придает ткани бархатистость, мягкую и приятную на ощупь поверхность, напоминающую кожицу спелого персика.`, 
+                description: `- Широкий силуэт, держащий форму;<br>- Широкие штаны из плотного футера 3-х нитки;<br>- Внутри утеплены флисом;<br>- Фиксирующий размер внутренний пояс;<br>- Два глубоких кармана спереди, один сзади;<br>- Теплоизоляционные свойства ткани обеспечивают сохранение тепла;<br>- Благодаря полиэстеру сохраняет широкий силуэт при ходьбе и не теряет форму после многократных стирок;<br>- Усиленная эластичность в шаговой зоне;<br>- Peach-эффект, который придает ткани бархатистость, мягкую и приятную на ощупь поверхность, напоминающую кожицу спелого персика.`, 
                 images: [
                     'img/GREY FRONT.png', 
                     'img/GREY BACK.png', 
@@ -618,11 +618,11 @@
                 ] 
             },
             'blue': { 
-                name: 'Тяжеловесы Blue', 
+                name: 'Тяжеловесы Синие', 
                 priceVal: 12000, 
                 price: '12 000 ₽',
                 modelInfo: 'Параметры модели: рост 186 см, вес 82 кг',
-                description: `- Широкий силуэт, держащий форму;<br>- Широкие штаны из плотного футера 3-х нитки;<br>- Внутри утеплены флисом;<br>- Фиксирующий размер внутренний пояс;<br>- Два глубоких кармана спереди, один сзади;<br>- Теплоизоляционные свойства ткани обеспечивают сохранение тепла;<br>- Благодаря флису сохраняет широкий силуэт при ходьбе и не теряет форму после многократных стирок;<br>- Усиленная эластичность в шаговой зоне;<br>- Peach-эффект, который придает ткани бархатистость, мягкую и приятную на ощупь поверхность, напоминающую кожицу спелого персика.`,
+                description: `- Широкий силуэт, держащий форму;<br>- Широкие штаны из плотного футера 3-х нитки;<br>- Внутри утеплены флисом;<br>- Фиксирующий размер внутренний пояс;<br>- Два глубоких кармана спереди, один сзади;<br>- Теплоизоляционные свойства ткани обеспечивают сохранение тепла;<br>- Благодаря полиэстеру сохраняет широкий силуэт при ходьбе и не теряет форму после многократных стирок;<br>- Усиленная эластичность в шаговой зоне;<br>- Peach-эффект, который придает ткани бархатистость, мягкую и приятную на ощупь поверхность, напоминающую кожицу спелого персика.`,
                 images: [
                     'img/BLUE FRONT.png',
                     'img/BLUE BACK.png',
@@ -1048,6 +1048,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;
     </script>
 </body>
 </html>
+
 
 
 
