--- a/index.html
+++ b/index.html
@@ -386,10 +386,10 @@
             <div id="content-comp" class="desc-content" style="display: none;">
                 <div class="char-row">
                     <span class="char-label">Хлопок</span>
-                    <span class="char-val">86%</span>
+                    <span class="char-val">86% (485 г/м²)</span>
                 </div>
                 <div class="char-row">
-                    <span class="char-label">Флис (485 г/м²)</span>
+                    <span class="char-label">Флис</span>
                     <span class="char-val">14%</span>
                 </div>
             </div>
@@ -1048,6 +1048,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;
     </script>
 </body>
 </html>
+
 
 
 
