--- a/index.html
+++ b/index.html
@@ -326,14 +326,14 @@
                 <img src="img/GREY FRONT.png" class="product-image">
                 <div class="product-info">
                     <div class="grid-price">12 000 ₽</div>
-                    <div class="grid-name">Тяжеловесы Серые</div>
+                    <div class="grid-name">«Тяжеловесы» Серые</div>
                 </div>
             </div>
             <div class="product-card" onclick="openProduct('blue')">
                 <img src="img/BLUE FRONT.png" class="product-image">
                 <div class="product-info">
                     <div class="grid-price">12 000 ₽</div>
-                    <div class="grid-name">Тяжеловесы Синие</div>
+                    <div class="grid-name">«Тяжеловесы» Синие</div>
                 </div>
             </div>
         </div>
@@ -605,7 +605,7 @@
         // ДАННЫЕ О ТОВАРАХ
         const productsData = {
             'grey': { 
-                name: 'Тяжеловесы Серые', 
+                name: '«Тяжеловесы» Серые', 
                 priceVal: 12000, 
                 price: '12 000 ₽',
                 modelInfo: 'Параметры модели: рост 181 см, вес 75 кг',
@@ -618,7 +618,7 @@
                 ] 
             },
             'blue': { 
-                name: 'Тяжеловесы Синие', 
+                name: '«Тяжеловесы» Синие', 
                 priceVal: 12000, 
                 price: '12 000 ₽',
                 modelInfo: 'Параметры модели: рост 186 см, вес 82 кг',
@@ -1048,6 +1048,7 @@ document.querySelector('.size-label span').innerText = currentSelectedSize;
     </script>
 </body>
 </html>
+
 
 
 
